# Projekt_MiAPR

./: .gitignore  README.md  map_test.xcf  neural_net.py  requirements.txt  sample_map.py  show_model.py  testing.py
models/: high_res_cost_map.npy  high_res_cost_map_medium.npy  occupancy_model_3.keras  occupancy_model_5.keras  occupancy_model_9.keras  occupancy_model_double1.keras  occupancy_model_test1.keras  occupancy_model_test2.keras  occupancy_model_test_blurred2.keras
neural_network/: train_network.py
ros2_ws/src/mapr_rrt/: package.xml  setup.cfg  setup.py
ros2_ws/src/mapr_rrt/launch/: rrt_ai_launch.py  rrt_launch.py
ros2_ws/src/mapr_rrt/mapr_rrt/: points.py  rrt.py  rrt_ai.py  rrt_vertices.py
ros2_ws/src/mapr_rrt/maps/: map.pgm  map_blurred.pgm  map_double.pgm  map_double_blurred.pgm  map_double_blurred.yaml  map_test.pgm  map_test_blurred.pgm  map_test_blurred.yaml
ros2_ws/src/mapr_rrt/rviz/: rviz_cfg.rviz
src/: map_blur.py  neural_net.py  sample_map.py  show_map.py  show_model.py
