<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapr_rrt</name>
  <version>1.0.0</version>
  <description>The mapr_rrt_project</description>
  <maintainer email="eryk.vykysaly@student.put.poznan.pl">Eryk</maintainer>
  <license>TODO</license>

  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
